Blurry modal fixed. Problem with transformation in css. Changed chart area opacity.

--- a/ManagerWeb/Sass/_modal.scss
+++ b/ManagerWeb/Sass/_modal.scss
@@ -6,10 +6,11 @@
     height: 100%;
     background: rgba(0, 0, 0, 0.6);
     z-index: 10;
+    // transform: translateX(1%);
 }
 
 .modal-main {
-    position: fixed;
+    position: absolute;
     background: white;
     height: auto;
     top: 50%;
